--- a/index.html
+++ b/index.html
@@ -11,6 +11,143 @@
     <meta name="author" content="Logicpath Systems">
     <title>Logicpath Systems - Transform Ideas Into Digital Solutions</title>
 
+    <!-- AOS Library for Scroll Animations -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <style>
+        /* Preloader Styles */
+        .preloader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            transition: opacity 0.5s ease, visibility 0.5s ease;
+        }
+
+        .preloader.hidden {
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        .preloader-content {
+            text-align: center;
+            color: white;
+        }
+
+        .preloader-logo {
+            font-size: 3rem;
+            animation: pulse 1.5s ease-in-out infinite;
+        }
+
+        .preloader-text {
+            margin-top: 1rem;
+            font-size: 1.25rem;
+            font-weight: 600;
+            letter-spacing: 2px;
+        }
+
+        .preloader-bar {
+            width: 200px;
+            height: 4px;
+            background: rgba(255, 255, 255, 0.3);
+            border-radius: 2px;
+            margin: 1.5rem auto 0;
+            overflow: hidden;
+        }
+
+        .preloader-bar::after {
+            content: '';
+            display: block;
+            width: 50%;
+            height: 100%;
+            background: white;
+            border-radius: 2px;
+            animation: loading 1s ease-in-out infinite;
+        }
+
+        @keyframes pulse {
+
+            0%,
+            100% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.1);
+            }
+        }
+
+        @keyframes loading {
+            0% {
+                transform: translateX(-100%);
+            }
+
+            100% {
+                transform: translateX(300%);
+            }
+        }
+
+        /* Floating Contact Button */
+        .floating-contact {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            width: 60px;
+            height: 60px;
+            background: linear-gradient(135deg, #3b82f6 0%, #1e3a8a 100%);
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 1.5rem;
+            text-decoration: none;
+            box-shadow: 0 4px 20px rgba(59, 130, 246, 0.5);
+            z-index: 1000;
+            transition: all 0.3s ease;
+            animation: float 3s ease-in-out infinite;
+        }
+
+        .floating-contact:hover {
+            transform: scale(1.1);
+            box-shadow: 0 6px 30px rgba(59, 130, 246, 0.7);
+        }
+
+        @keyframes float {
+
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(-10px);
+            }
+        }
+
+        /* Glassmorphism Cards */
+        .service-card,
+        .stat-card {
+            background: rgba(255, 255, 255, 0.8) !important;
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+        }
+
+        .app-card {
+            background: rgba(255, 255, 255, 0.9) !important;
+            backdrop-filter: blur(15px);
+            -webkit-backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.4);
+        }
+    </style>
+
     <style>
         /* CSS Reset & Base Styles */
         * {
@@ -887,6 +1024,20 @@
 </head>
 
 <body>
+    <!-- Preloader -->
+    <div class="preloader" id="preloader">
+        <div class="preloader-content">
+            <div class="preloader-logo">💻</div>
+            <div class="preloader-text">LOGICPATH SYSTEMS</div>
+            <div class="preloader-bar"></div>
+        </div>
+    </div>
+
+    <!-- Floating Contact Button -->
+    <a href="#contact" class="floating-contact" title="Contact Us">
+        ✉️
+    </a>
+
     <!-- Header & Navigation -->
     <header>
         <div class="container">
@@ -924,14 +1075,14 @@
     <!-- Featured Apps Section -->
     <section id="apps" class="apps">
         <div class="container">
-            <div class="section-header">
+            <div class="section-header" data-aos="fade-up">
                 <h2>Our Featured Applications</h2>
                 <p>Download our highly-rated mobile applications. Currently published under our individual developer
                     profile, in the process of migration to the Logicpath Systems Organization Account.</p>
             </div>
             <div class="apps-grid">
                 <!-- Marathi Calendar 2026 -->
-                <div class="app-card">
+                <div class="app-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="app-header">
                         <div class="app-icon">📅</div>
                         <h3>Marathi Calendar 2026-कॅलेंडर</h3>
@@ -978,7 +1129,7 @@
                 </div>
 
                 <!-- Constitution of India -->
-                <div class="app-card">
+                <div class="app-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="app-header">
                         <div class="app-icon">⚖️</div>
                         <h3>Constitution of India-Articles</h3>
@@ -1030,22 +1181,22 @@
         <div class="container">
             <h2>Our Achievements in Numbers</h2>
             <div class="stats-grid">
-                <div class="stat-card">
+                <div class="stat-card" data-aos="zoom-in" data-aos-delay="100">
                     <div class="stat-card-icon">⬇️</div>
                     <div class="stat-card-number">2,100+</div>
                     <div class="stat-card-label">Total App Downloads</div>
                 </div>
-                <div class="stat-card">
+                <div class="stat-card" data-aos="zoom-in" data-aos-delay="200">
                     <div class="stat-card-icon">📱</div>
                     <div class="stat-card-number">2</div>
                     <div class="stat-card-label">Live Applications</div>
                 </div>
-                <div class="stat-card">
+                <div class="stat-card" data-aos="zoom-in" data-aos-delay="300">
                     <div class="stat-card-icon">📅</div>
                     <div class="stat-card-number">5+</div>
                     <div class="stat-card-label">Years of Experience</div>
                 </div>
-                <div class="stat-card">
+                <div class="stat-card" data-aos="zoom-in" data-aos-delay="400">
                     <div class="stat-card-icon">⭐</div>
                     <div class="stat-card-number">5.0</div>
                     <div class="stat-card-label">Average Rating</div>
@@ -1057,42 +1208,42 @@
     <!-- Services Section -->
     <section id="services" class="services">
         <div class="container">
-            <div class="section-header">
+            <div class="section-header" data-aos="fade-up">
                 <h2>Our Services</h2>
                 <p>Comprehensive digital solutions tailored to your business needs</p>
             </div>
             <div class="services-grid">
-                <div class="service-card">
+                <div class="service-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="service-icon">📱</div>
                     <h3>Android App Development</h3>
                     <p>Custom Android applications built with modern technologies like Java, Kotlin, and Flutter. From
                         concept to deployment on Google Play Store.</p>
                 </div>
-                <div class="service-card">
+                <div class="service-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="service-icon">🌐</div>
                     <h3>Web Development</h3>
                     <p>Responsive, fast, and SEO-friendly websites using cutting-edge frameworks like React, Angular,
                         and modern web technologies.</p>
                 </div>
-                <div class="service-card">
+                <div class="service-card" data-aos="fade-up" data-aos-delay="300">
                     <div class="service-icon">🎨</div>
                     <h3>UI/UX Design</h3>
                     <p>Beautiful, intuitive interfaces designed with user experience in mind. Wireframes, prototypes,
                         and polished final designs.</p>
                 </div>
-                <div class="service-card">
+                <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                     <div class="service-icon">⚙️</div>
                     <h3>Backend Development</h3>
                     <p>Robust server-side solutions with scalable databases, APIs, and cloud infrastructure using
                         Firebase, AWS, and MongoDB.</p>
                 </div>
-                <div class="service-card">
+                <div class="service-card" data-aos="fade-up" data-aos-delay="500">
                     <div class="service-icon">🔧</div>
                     <h3>App Maintenance & Support</h3>
                     <p>Ongoing support, bug fixes, feature updates, and performance optimization to keep your apps
                         running smoothly.</p>
                 </div>
-                <div class="service-card">
+                <div class="service-card" data-aos="fade-up" data-aos-delay="600">
                     <div class="service-icon">📊</div>
                     <h3>Digital Marketing</h3>
                     <p>App Store Optimization (ASO), social media marketing, and user acquisition strategies to grow
@@ -1497,6 +1648,67 @@
             } else {
                 header.style.boxShadow = '0 2px 10px rgba(0, 0, 0, 0.1)';
             }
+        });
+
+        // Hide Preloader
+        window.addEventListener('load', () => {
+            const preloader = document.getElementById('preloader');
+            setTimeout(() => {
+                preloader.classList.add('hidden');
+            }, 1500);
+        });
+
+        // Animated Stats Counter
+        function animateCounter(element, target, duration = 2000) {
+            let start = 0;
+            const increment = target / (duration / 16);
+            const isDecimal = target % 1 !== 0;
+
+            function updateCounter() {
+                start += increment;
+                if (start < target) {
+                    element.textContent = isDecimal ? start.toFixed(1) : Math.floor(start).toLocaleString() + '+';
+                    requestAnimationFrame(updateCounter);
+                } else {
+                    element.textContent = isDecimal ? target.toFixed(1) : target.toLocaleString() + '+';
+                }
+            }
+            updateCounter();
+        }
+
+        // Intersection Observer for Stats
+        const statsObserver = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    const statNumbers = entry.target.querySelectorAll('.stat-card-number');
+                    statNumbers.forEach(num => {
+                        const text = num.textContent;
+                        const value = parseFloat(text.replace(/[^0-9.]/g, ''));
+                        if (value && !num.dataset.animated) {
+                            num.dataset.animated = 'true';
+                            num.textContent = '0';
+                            animateCounter(num, value);
+                        }
+                    });
+                    statsObserver.unobserve(entry.target);
+                }
+            });
+        }, { threshold: 0.5 });
+
+        const statsSection = document.getElementById('stats');
+        if (statsSection) {
+            statsObserver.observe(statsSection);
+        }
+    </script>
+
+    <!-- AOS Library -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 800,
+            easing: 'ease-out-cubic',
+            once: true,
+            offset: 50
         });
     </script>
 </body>
