--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
     <meta name="author" content="Logicpath Systems">
     <title>Logicpath Systems - Transform Ideas Into Digital Solutions</title>
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+
+    <!-- Devicon CDN for Tech Stack Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
+    <!-- Google Analytics (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1EP2QR7LXL"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-1EP2QR7LXL');
+    </script>
+
     <style>
         /* CSS Reset & Base Styles */
         * {
