Update address in contact and privacy policy

--- a/index.html
+++ b/index.html
@@ -1269,7 +1269,8 @@
                         <div class="contact-icon">📍</div>
                         <div class="contact-details">
                             <h4>Address</h4>
-                            <p>388b, Bhosa Janar Road, Gour,<br>Osmanabad, Maharashtra - 413525</p>
+                            <p>534/4/54, Shanti Nagar, Kasarwadi Road,<br>Barshi, Dist. Solapur, Maharashtra - 413401
+                            </p>
                         </div>
                     </div>
                     <div class="contact-item">
