--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -169,7 +169,7 @@
             <li>By email: contact@logicpathsystems.com</li>
             <li>By visiting this page on our website: <a href="index.html#contact">logicpathsystems.com/#contact</a>
             </li>
-            <li>By mail: 388b, Bhosa Janar Road, Gour, Osmanabad, Maharashtra - 413525</li>
+            <li>By mail: 534/4/54, Shanti Nagar, Kasarwadi Road, Barshi, Dist. Solapur, Maharashtra - 413401</li>
         </ul>
     </main>
 
