--- a/index.html
+++ b/index.html
@@ -11,6 +11,51 @@
     <meta name="author" content="Logicpath Systems">
     <title>Logicpath Systems - Transform Ideas Into Digital Solutions</title>
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://logicpathsystems.com/">
+    <meta property="og:title" content="Logicpath Systems - We Build Apps That People Love">
+    <meta property="og:description"
+        content="Transforming ideas into polished digital experiences. Professional Android & Web Development Company grounded in Barshi, Maharashtra.">
+    <meta property="og:image" content="https://logicpathsystems.com/assets/images/logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://logicpathsystems.com/">
+    <meta property="twitter:title" content="Logicpath Systems - We Build Apps That People Love">
+    <meta property="twitter:description"
+        content="Transforming ideas into polished digital experiences. Professional Android & Web Development.">
+    <meta property="twitter:image" content="https://logicpathsystems.com/assets/images/logo.png">
+
+    <!-- JSON-LD Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Logicpath Systems",
+      "url": "https://logicpathsystems.com",
+      "logo": "https://logicpathsystems.com/assets/images/logo.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+91-9422067401",
+        "contactType": "customer service",
+        "areaServed": "IN",
+        "availableLanguage": ["en", "mr", "hi"]
+      },
+      "sameAs": [
+        "https://www.linkedin.com/company/logicpath-systems"
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "534/4/54, Shanti Nagar, Kasarwadi Road",
+        "addressLocality": "Barshi",
+        "addressRegion": "Maharashtra",
+        "postalCode": "413401",
+        "addressCountry": "IN"
+      }
+    }
+    </script>
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -40,7 +85,7 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             line-height: 1.7;
             color: #1f2937;
             background: #ffffff;
@@ -86,13 +131,20 @@
 
         /* Header & Navigation */
         header {
-            background: rgba(255, 255, 255, 0.98);
-            backdrop-filter: blur(10px);
+            background: #1e3a8a;
+            /* Dark blue background */
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            position: sticky;
-            top: 0;
+            position: fixed;
+            width: 100%;
             z-index: 1000;
-            transition: all 0.3s ease;
+            top: 0;
+            transition: background 0.3s;
+        }
+
+        header.scrolled {
+            background: rgba(30, 58, 138, 0.95);
+            /* Slightly transparent dark blue when scrolled */
+            backdrop-filter: blur(10px);
         }
 
         nav {
@@ -103,13 +155,19 @@
         }
 
         .logo {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: #1e3a8a;
-            text-decoration: none;
             display: flex;
             align-items: center;
             gap: 0.5rem;
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: white;
+            /* White text for logo */
+            text-decoration: none;
+        }
+
+        .logo img {
+            height: 50px;
+            /* Logo image style */
         }
 
         .nav-links {
@@ -119,7 +177,8 @@
         }
 
         .nav-links a {
-            color: #1f2937;
+            color: white;
+            /* White text for nav links */
             text-decoration: none;
             font-weight: 500;
             transition: color 0.3s ease;
@@ -127,7 +186,8 @@
         }
 
         .nav-links a:hover {
-            color: #3b82f6;
+            color: #93c5fd;
+            /* Lighter blue on hover */
         }
 
         .nav-links a::after {
@@ -137,7 +197,8 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: #3b82f6;
+            background: #93c5fd;
+            /* Lighter blue underline */
             transition: width 0.3s ease;
         }
 
@@ -151,22 +212,34 @@
             border: none;
             font-size: 1.5rem;
             cursor: pointer;
-            color: #1f2937;
+            color: white;
+            /* White color for mobile menu toggle */
         }
 
         /* Hero Section */
         .hero {
-            background:
-                linear-gradient(135deg, rgba(30, 58, 138, 0.85) 0%, rgba(59, 130, 246, 0.8) 100%),
-                url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
+            background: linear-gradient(-45deg, #1e3a8a, #3b82f6, #6366f1, #8b5cf6);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
             color: white;
-            padding: 8rem 0 6rem;
+            padding: 10rem 0 8rem;
             text-align: center;
             position: relative;
             overflow: hidden;
+        }
+
+        @keyframes gradientBG {
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
         }
 
         .hero::before {
@@ -297,6 +370,80 @@
             color: white;
         }
 
+        .trust-badges {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+            margin-top: 3rem;
+            flex-wrap: wrap;
+            animation: fadeInUp 0.8s ease 0.6s backwards;
+        }
+
+        .badge-item {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(5px);
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            font-size: 0.9rem;
+            font-weight: 500;
+        }
+
+        .scroll-down {
+            position: absolute;
+            bottom: 2rem;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            color: white;
+            text-decoration: none;
+            opacity: 0.8;
+            transition: opacity 0.3s;
+            animation: bounce 2s infinite;
+        }
+
+        .scroll-down:hover {
+            opacity: 1;
+        }
+
+        .scroll-arrow {
+            width: 20px;
+            height: 20px;
+            border-right: 2px solid white;
+            border-bottom: 2px solid white;
+            transform: rotate(45deg);
+            margin-top: 10px;
+        }
+
+        @keyframes bounce {
+
+            0%,
+            20%,
+            50%,
+            80%,
+            100% {
+                transform: translateX(-50%) translateY(0);
+            }
+
+            40% {
+                transform: translateX(-50%) translateY(-10px);
+            }
+
+            60% {
+                transform: translateX(-50%) translateY(-5px);
+            }
+        }
+
+        /* Apps Section */
+        .apps {
+            background: #f3f4f6;
+        }
+
         .app-card:nth-child(2) .app-header {
             background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
         }
@@ -304,6 +451,32 @@
         .app-icon {
             font-size: 4rem;
             margin-bottom: 1rem;
+            display: none;
+            /* Hide old icon style */
+        }
+
+        .device-frame {
+            position: relative;
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+            margin: 1rem auto 2rem;
+            max-width: 100%;
+            /* Allow full width */
+            border: 4px solid #1f2937;
+            /* Thinner border */
+            background: #fff;
+        }
+
+        .device-frame:hover {
+            transform: translateY(-5px);
+            transition: transform 0.3s ease;
+        }
+
+        .device-frame img {
+            display: block;
+            width: 100%;
+            height: auto;
         }
 
         .app-header h3 {
@@ -837,7 +1010,9 @@
                 top: 70px;
                 left: -100%;
                 width: 100%;
-                background: white;
+                width: 100%;
+                background: #1e3a8a;
+                /* Dark blue background */
                 flex-direction: column;
                 padding: 2rem;
                 box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
@@ -917,8 +1092,7 @@
         <div class="container">
             <nav>
                 <a href="#" class="logo">
-                    <span>💻</span>
-                    Logicpath Systems
+                    <img src="assets/images/logo.png" alt="Logicpath Systems" style="height: 50px; width: auto;">
                 </a>
                 <button class="mobile-menu-toggle" aria-label="Toggle menu">☰</button>
                 <ul class="nav-links">
@@ -933,16 +1107,26 @@
     </header>
 
     <!-- Hero Section -->
+    <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Transform Ideas Into Digital Solutions</h1>
-                <p>Professional Android App Development & Web Development Services</p>
+                <h1>We Build Apps That People Love</h1>
+                <p>Transforming ideas into polished digital experiences. Professional Android & Web Development.</p>
                 <div class="cta-buttons">
-                    <a href="#apps" class="btn btn-primary">Download Our Apps</a>
-                    <a href="#contact" class="btn btn-secondary">Get Started</a>
+                    <a href="#apps" class="btn btn-primary">View Our Apps</a>
+                    <a href="#contact" class="btn btn-secondary">Start Your Project</a>
+                </div>
+                <div class="trust-badges">
+                    <div class="badge-item"><span>🚀</span> Trusted by 2,100+ Users</div>
+                    <div class="badge-item"><span>⭐</span> 5.0 Average Rating</div>
+                    <div class="badge-item"><span>📱</span> 2 Live Apps</div>
                 </div>
             </div>
+            <a href="#apps" class="scroll-down" aria-label="Scroll down">
+                <span>Scroll Down</span>
+                <div class="scroll-arrow"></div>
+            </a>
         </div>
     </section>
 
@@ -958,7 +1142,9 @@
                 <!-- Marathi Calendar 2026 -->
                 <div class="app-card">
                     <div class="app-header">
-                        <div class="app-icon">📅</div>
+                        <div class="device-frame">
+                            <img src="assets/images/calendar.png" alt="Marathi Calendar App Screenshot">
+                        </div>
                         <h3>Marathi Calendar 2026-कॅलेंडर</h3>
                         <span class="app-category">Lifestyle • Productivity</span>
                     </div>
@@ -1005,8 +1191,10 @@
                 <!-- Constitution of India -->
                 <div class="app-card">
                     <div class="app-header">
-                        <div class="app-icon">⚖️</div>
-                        <h3>Constitution of India-Articles</h3>
+                        <div class="device-frame">
+                            <img src="assets/images/constitution.png" alt="Constitution of India App Screenshot">
+                        </div>
+                        <h3>Constitution of India (Indian Law)</h3>
                         <span class="app-category">Education • Reference</span>
                     </div>
                     <div class="app-body">
@@ -1067,7 +1255,7 @@
                 </div>
                 <div class="stat-card">
                     <div class="stat-card-icon">📅</div>
-                    <div class="stat-card-number">5+</div>
+                    <div class="stat-card-number">1+</div>
                     <div class="stat-card-label">Years of Experience</div>
                 </div>
                 <div class="stat-card">
@@ -1259,14 +1447,14 @@
                         </div>
                     </div>
                     <div class="contact-item">
-                        <div class="contact-icon">📞</div>
+                        <div class="contact-icon" aria-hidden="true">📞</div>
                         <div class="contact-details">
                             <h4>Phone</h4>
                             <p>+91 9422067401</p>
                         </div>
                     </div>
                     <div class="contact-item">
-                        <div class="contact-icon">📍</div>
+                        <div class="contact-icon" aria-hidden="true">📍</div>
                         <div class="contact-details">
                             <h4>Address</h4>
                             <p>534/4/54, Shanti Nagar, Kasarwadi Road,<br>Barshi, Dist. Solapur, Maharashtra - 413401
@@ -1274,14 +1462,14 @@
                         </div>
                     </div>
                     <div class="contact-item">
-                        <div class="contact-icon">🌐</div>
+                        <div class="contact-icon" aria-hidden="true">🌐</div>
                         <div class="contact-details">
                             <h4>Website</h4>
                             <p>logicpathsystems.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
-                        <div class="contact-icon">🕒</div>
+                        <div class="contact-icon" aria-hidden="true">🕒</div>
                         <div class="contact-details">
                             <h4>Business Hours</h4>
                             <p>Monday - Saturday<br>10:00 AM - 7:00 PM</p>
