Fix hero background CSS: use background-image and scroll attachment

--- a/index.html
+++ b/index.html
@@ -218,10 +218,12 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(30, 58, 138, 0.8), rgba(30, 58, 138, 0.9)), url('assets/images/header-bg.png');
+            background-image: linear-gradient(rgba(30, 58, 138, 0.7), rgba(30, 58, 138, 0.8)), url('assets/images/header-bg.png');
             background-size: cover;
             background-position: center;
-            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-attachment: scroll;
+            /* Changed to scroll for better mobile support */
             color: white;
             padding: 10rem 0 8rem;
             text-align: center;
