Fix logo visibility: Add white background to logo image

--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
         .logo img {
             height: 50px;
             /* Logo image style */
+            background: white;
+            padding: 5px;
+            border-radius: 4px;
         }
 
         .nav-links {
