Revert header to white theme for logo visibility

--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
 
         /* Header & Navigation */
         header {
-            background: #1e3a8a;
-            /* Dark blue background */
+            background: rgba(255, 255, 255, 0.98);
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             position: fixed;
             width: 100%;
@@ -142,8 +141,7 @@
         }
 
         header.scrolled {
-            background: rgba(30, 58, 138, 0.95);
-            /* Slightly transparent dark blue when scrolled */
+            background: rgba(255, 255, 255, 0.98);
             backdrop-filter: blur(10px);
         }
 
@@ -160,17 +158,14 @@
             gap: 0.5rem;
             font-size: 1.5rem;
             font-weight: 700;
-            color: white;
-            /* White text for logo */
+            color: #1e3a8a;
+            /* Blue text for text-based fallback */
             text-decoration: none;
         }
 
         .logo img {
             height: 50px;
             /* Logo image style */
-            background: white;
-            padding: 5px;
-            border-radius: 4px;
         }
 
         .nav-links {
@@ -180,8 +175,8 @@
         }
 
         .nav-links a {
-            color: white;
-            /* White text for nav links */
+            color: #1f2937;
+            /* Dark gray text */
             text-decoration: none;
             font-weight: 500;
             transition: color 0.3s ease;
@@ -189,8 +184,8 @@
         }
 
         .nav-links a:hover {
-            color: #93c5fd;
-            /* Lighter blue on hover */
+            color: #3b82f6;
+            /* Blue hover */
         }
 
         .nav-links a::after {
@@ -199,9 +194,7 @@
             bottom: -5px;
             left: 0;
             width: 0;
-            height: 2px;
-            background: #93c5fd;
-            /* Lighter blue underline */
+            background: #3b82f6;
             transition: width 0.3s ease;
         }
 
@@ -215,8 +208,8 @@
             border: none;
             font-size: 1.5rem;
             cursor: pointer;
-            color: white;
-            /* White color for mobile menu toggle */
+            color: #1f2937;
+            /* Dark color for mobile menu toggle */
         }
 
         /* Hero Section */
