Optimize header background for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -214,17 +214,24 @@
 
         /* Hero Section */
         .hero {
-            background-image: linear-gradient(rgba(30, 58, 138, 0.7), rgba(30, 58, 138, 0.8)), url('assets/images/header-bg.png');
+            background-image: linear-gradient(rgba(30, 58, 138, 0.85), rgba(30, 58, 138, 0.9)), url('assets/images/header-bg.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: scroll;
-            /* Changed to scroll for better mobile support */
             color: white;
             padding: 10rem 0 8rem;
             text-align: center;
             position: relative;
             overflow: hidden;
+        }
+
+        @media (max-width: 768px) {
+            .hero {
+                padding: 8rem 0 6rem;
+                background-position: center top;
+                /* Focus on top part of image on mobile */
+            }
         }
 
         /* Removed gradient animation */
