--- a/index.html
+++ b/index.html
@@ -451,15 +451,18 @@
 
         .device-frame {
             position: relative;
-            border-radius: 12px;
+            border-radius: 20px;
+            /* Slightly larger radius for the frame */
             overflow: hidden;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
             margin: 1rem auto 2rem;
             max-width: 100%;
-            /* Allow full width */
-            border: 4px solid #1f2937;
-            /* Thinner border */
-            background: #fff;
+            border: 8px solid #1f2937;
+            /* Thicker border for bezel effect */
+            background: #1f2937;
+            /* Match border color */
+            padding: 2px;
+            /* Small padding to prevent image edge clipping */
         }
 
         .device-frame:hover {
@@ -471,6 +474,10 @@
             display: block;
             width: 100%;
             height: auto;
+            border-radius: 12px;
+            /* Inner radius for the screen/image */
+            background: white;
+            /* Ensure image has a background */
         }
 
         .app-header h3 {
