Fix horizontal scrolling issue on mobile devices

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
         html {
             scroll-behavior: smooth;
+            overflow-x: hidden;
         }
 
         body {
@@ -89,6 +90,7 @@
             line-height: 1.7;
             color: #1f2937;
             background: #ffffff;
+            overflow-x: hidden;
         }
 
         /* Typography */
