Optimize header background size (1.7MB -> 163KB)

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
         /* Hero Section */
         .hero {
-            background-image: linear-gradient(rgba(30, 58, 138, 0.85), rgba(30, 58, 138, 0.9)), url('assets/images/header-bg.png');
+            background-image: linear-gradient(rgba(30, 58, 138, 0.85), rgba(30, 58, 138, 0.9)), url('assets/images/header-bg.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
